--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -27,3 +27,16 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.input-money-wrap {
+  position: relative;
+  &_input {
+    padding-right: 109px !important;
+  }
+  &_type {
+    right: 2px;
+    position: absolute;
+    top: 50%;
+    transform: translate(0%, -50%);
+  }
+}
